# SOS-data-collection

./: .gitignore  README.md
api/: pyproject.toml
api/src/: run.py
api/src/sos_data_api/app/: __init__.py
api/src/sos_data_api/app/models/entity/: technology.py
api/src/sos_data_api/app/models/repository/: technology_base.py
api/src/sos_data_api/app/resources/entity/: models.py
api/src/sos_data_api/app/resources/repository/: technology_info.py  technology_repo.py
api/src/sos_data_api/app/web/resources/: technology.py
client/: README.md
client/sos-ui/: .eslintrc.js  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/sos-ui/src/: App.vue  main.ts
client/sos-ui/src/components/: ContentFrame.vue  DetailsCard.vue  Navbar.vue  TabBar.vue  TechnologyForm.vue
client/sos-ui/src/router/: index.ts
client/sos-ui/src/views/: Home.vue
client/sos-ui/src/views/Technology/: Add.vue  List.vue
docker/: Dockerfile
docker/client/dev/: run.sh  up.sh
docker/client/prod/: Dockerfile
sos.collector/: pyproject.toml
