[tool.poetry]
name = "sos_data_api"
version = "0.1.0"
description = "Data api for Stack Over Services Project"
authors = ["Alan Bandeira <alan.p.bandeira@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
flask = "^1.1.2"
firebase_admin = "^4.3.0"
flask-restful = "^0.3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
