[tool.poetry]
name = "sos_collector"
version = "0.1.0"
description = "A lib for collecting StackOverServices research data"
authors = ["Alan Bandeira <alan.p.bandeira@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
